Bug 1821477 - Use Maybe to denote whether mRequestedCaptureInterval is set. r=karlt, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D172317